BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Data_Change_Request_BMS_CN__c.object
<CustomObject>
    <description>To submit change request on doctors for BMS for China</description>
    <fields>
        <fullName>Action_Type_BMS_CN__c</fullName>
        <description>DCR Request Type</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ADD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Administrative_Title_BMS_CN__c</fullName>
        <description>Administrative Title</description>
        <label>Administrative Title</label>
        <picklist>
            <picklistValues>
                <fullName>A001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT003</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Administrative_Title_Final_BMS_CN__c</fullName>
        <description>Final Administrative Title</description>
        <label>Administrative Title</label>
        <picklist>
            <picklistValues>
                <fullName>A001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT003</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Administrative_Title_Verified_BMS_CN__c</fullName>
        <description>Verified Administrative Title</description>
        <label>Administrative Title</label>
        <picklist>
            <picklistValues>
                <fullName>A001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT003</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments_BMS_CN__c</fullName>
        <description>Comments</description>
        <label>Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Final_BMS_CN__c</fullName>
        <description>Final Comments</description>
        <label>Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Verified_BMS_CN__c</fullName>
        <description>Verified Comments</description>
        <label>Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Name_BMS_CN__c</fullName>
        <description>Customer name displayed on list view</description>
        <formula>IF( TEXT(Action_Type_BMS_CN__c) == &quot;ADD&quot;,
 Doctor_Name_BMS_CN__c,
 Doctor_BMS_CN__r.LastName )</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_BMS_CN__c</fullName>
        <description>Department</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>CCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>END</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_Final_BMS_CN__c</fullName>
        <description>Final Department</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>CCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>END</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_Verified_BMS_CN__c</fullName>
        <description>Verified Department</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>CCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OBG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>END</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Doctor_BMS_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Doctor Account(Only for edit/del doctor)</description>
        <label>Doctor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>BMS - Individual</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Data_Change_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doctor_Code_BMS_CN__c</fullName>
        <description>Master ID of doctor inputted by InVentiv(Only for Add new doctor)</description>
        <label>Doctor Code</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_ID_BMS_CN__c</fullName>
        <description>Master ID of doctor popped up from Account Profile(Only for edit/del doctor)</description>
        <formula>Doctor_BMS_CN__r.BP_ID_BMS_CORE__c</formula>
        <label>Doctor ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Name_BMS_CN__c</fullName>
        <description>Doctor Name inputted by user(Only used for add new doctor)</description>
        <label>Doctor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Name_Final_BMS_CN__c</fullName>
        <description>Final Doctor Name inputted by SFE(Only for add new doctor)</description>
        <label>Doctor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Name_Verified_BMS_CN__c</fullName>
        <description>Verified Doctor Name inputted by InVentiv(Only for add new doctor)</description>
        <label>Doctor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_BMS_CN__c</fullName>
        <description>Gender</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender_Final_BMS_CN__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender_Verified_BMS_CN__c</fullName>
        <description>Verified Gender</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hospital_BMS_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hospital</description>
        <label>Hospital</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>BMS - Institution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Data_Change_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hospital_Final_BMS_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Final Hospital</description>
        <label>Hospital</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>BMS - Institution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Data_Change_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hospital_ID_BMS_CN__c</fullName>
        <formula>Hospital_BMS_CN__r.BP_ID_BMS_CORE__c</formula>
        <label>Hospital ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_ID_Final_BMS_CN__c</fullName>
        <description>Final master ID of hospital popped up from account profile</description>
        <formula>Hospital_Final_BMS_CN__r.BP_ID_BMS_CORE__c</formula>
        <label>Hospital ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_ID_Verified_BMS_CN__c</fullName>
        <description>Verified master ID of hospital popped up from account profile</description>
        <formula>Hospital_Verified_BMS_CN__r.BP_ID_BMS_CORE__c</formula>
        <label>Hospital ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Verified_BMS_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Verified hospital</description>
        <label>Hospital</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>BMS - Institution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Data_Change_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Social_Title_BMS_CN__c</fullName>
        <description>Social Title</description>
        <label>Social Title</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Social_Title_Final_BMS_CN__c</fullName>
        <description>Final Social Title</description>
        <label>Social Title</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Social_Title_Verified_BMS_CN__c</fullName>
        <description>Verified Social Title</description>
        <label>Social Title</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_BMS_CN__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Title_BMS_CN__c</fullName>
        <description>Technical Title</description>
        <label>Technical Title</label>
        <picklist>
            <picklistValues>
                <fullName>E011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T003</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Title_Final_BMS_CN__c</fullName>
        <description>Final Technical Title</description>
        <label>Technical Title</label>
        <picklist>
            <picklistValues>
                <fullName>E011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T003</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Title_Verified_BMS_CN__c</fullName>
        <description>Verified Technical Title</description>
        <label>Technical Title</label>
        <picklist>
            <picklistValues>
                <fullName>E011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T003</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Data Change Request (Not in use for EU)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name_BMS_CN__c</columns>
        <columns>Action_Type_BMS_CN__c</columns>
        <columns>Status_BMS_CN__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Approved_BMS_CN</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name_BMS_CN__c</columns>
        <columns>Action_Type_BMS_CN__c</columns>
        <columns>Status_BMS_CN__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_BMS_CN__c</field>
            <operation>contains</operation>
            <value>Approved</value>
        </filters>
        <label>Approved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending_BMS_CN</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name_BMS_CN__c</columns>
        <columns>Action_Type_BMS_CN__c</columns>
        <columns>Status_BMS_CN__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_BMS_CN__c</field>
            <operation>contains</operation>
            <value>Submitted,Verified</value>
        </filters>
        <label>Pending</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rejected_BMS_CN</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name_BMS_CN__c</columns>
        <columns>Action_Type_BMS_CN__c</columns>
        <columns>Status_BMS_CN__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_BMS_CN__c</field>
            <operation>contains</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DCR{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Change Requests ( Not in use for EU)</pluralLabel>
    <recordTypes>
        <fullName>Add_Individual_BMS_CN</fullName>
        <active>true</active>
        <description>Add Individual</description>
        <label>Add Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Add_Individual_Locked_BMS_CN</fullName>
        <active>true</active>
        <description>Add Individual - Locked</description>
        <label>Add Individual - Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Add_Individual_Submitted_BMS_CN</fullName>
        <active>true</active>
        <description>Add Individual - Submitted</description>
        <label>Add Individual - Submitted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Add_Individual_Verified_BMS_CN</fullName>
        <active>true</active>
        <description>Add Individual - Verified</description>
        <label>Add Individual - Verified</label>
    </recordTypes>
    <recordTypes>
        <fullName>Del_Individual_BMS_CN</fullName>
        <active>true</active>
        <description>Del Individual</description>
        <label>Del Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Del_Individual_Locked_BMS_CN</fullName>
        <active>true</active>
        <description>Del Individual - Locked</description>
        <label>Del Individual - Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>Del_Individual_Submitted_BMS_CN</fullName>
        <active>true</active>
        <description>Del Individual - Submitted</description>
        <label>Del Individual - Submitted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Del_Individual_Verified_BMS_CN</fullName>
        <active>true</active>
        <description>Del Individual - Verified</description>
        <label>Del Individual - Verified</label>
    </recordTypes>
</CustomObject>